--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,16 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Inter:wght@300;400;600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="background-animation"></div>
     <div class="container">
         <header>
-            
+            <img src="https://placehold.co/200x80/transparent/d4af37?text=VOTRE+LOGO" alt="Logo" class="site-logo">
             <p>Créez des concepts de covering de véhicule ultra-réalistes et professionnels.</p>
         </header>
 
@@ -90,20 +93,24 @@
                     <div class="grid-2">
                         <div class="input-group">
                             <label for="style">Style Demandé</label>
-                            <input type="text" id="style" placeholder="Ex: Moderne, Minimaliste, Géométrique, Agressif" required>
+                            <input type="text" id="style" placeholder="Ex: Moderne, Minimaliste, Géométrique, Agressif"
+                                required>
                         </div>
                         <div class="input-group">
                             <label for="primary_colors">Couleurs Principales</label>
-                            <input type="text" id="primary_colors" placeholder="Ex: Bleu Marine, Blanc et Argent" required>
+                            <input type="text" id="primary_colors" placeholder="Ex: Bleu Marine, Blanc et Argent"
+                                required>
                         </div>
                     </div>
                     <div class="input-group">
                         <label for="logo_instruction">Instructions Logo</label>
-                        <textarea id="logo_instruction" rows="2" placeholder="Décrivez le logo ou indiquez 'Utiliser le texte comme logo'"></textarea>
+                        <textarea id="logo_instruction" rows="2"
+                            placeholder="Décrivez le logo ou indiquez 'Utiliser le texte comme logo'"></textarea>
                     </div>
                     <div class="input-group">
                         <label for="constraints">Contraintes & Éléments à éviter</label>
-                        <textarea id="constraints" rows="2" placeholder="Ex: Pas de photos réalistes, pas de dégradés trop complexes..."></textarea>
+                        <textarea id="constraints" rows="2"
+                            placeholder="Ex: Pas de photos réalistes, pas de dégradés trop complexes..."></textarea>
                     </div>
                 </section>
 
@@ -129,4 +136,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
