--- a/results.html
+++ b/results.html
@@ -128,22 +128,23 @@
             display: inline-flex;
             align-items: center;
             gap: 6px;
-            background: #000;
-            color: #fff;
+            background: #d4af37;
+            color: #000;
             border: none;
             padding: 10px 18px;
             border-radius: 20px;
             font-size: 0.85rem;
-            font-weight: 500;
+            font-weight: 600;
             cursor: pointer;
-            transition: background 0.2s, transform 0.2s;
+            transition: background 0.2s, transform 0.2s, box-shadow 0.2s;
             font-family: 'Inter', sans-serif;
             text-decoration: none;
         }
 
         .download-btn:hover {
-            background: #222;
+            background: #c9a032;
             transform: translateY(-1px);
+            box-shadow: 0 4px 12px rgba(212, 175, 55, 0.3);
         }
 
         .download-btn svg {
@@ -331,6 +332,21 @@
 
             // Get images from sessionStorage
             const images = JSON.parse(sessionStorage.getItem('generatedImages') || '[]');
+            const logoWarning = sessionStorage.getItem('logoWarning');
+            const logoUsed = sessionStorage.getItem('logoUsed');
+
+            // Show logo status warning if needed
+            if (logoWarning) {
+                const warn = document.createElement('div');
+                warn.style.cssText = 'background:#fff3cd;color:#856404;padding:12px 20px;border-radius:8px;margin-bottom:20px;font-size:0.9rem;text-align:center;';
+                warn.textContent = 'Logo non pris en compte : ' + logoWarning;
+                grid.parentNode.insertBefore(warn, grid);
+            } else if (logoUsed === 'true') {
+                const ok = document.createElement('div');
+                ok.style.cssText = 'background:#d4edda;color:#155724;padding:12px 20px;border-radius:8px;margin-bottom:20px;font-size:0.9rem;text-align:center;';
+                ok.textContent = 'Logo envoye avec succes comme reference pour la generation.';
+                grid.parentNode.insertBefore(ok, grid);
+            }
 
             if (images.length === 0) {
                 grid.classList.add('hidden');
