--- a/results.html
+++ b/results.html
@@ -251,22 +251,23 @@
             display: inline-flex;
             align-items: center;
             gap: 8px;
-            background: #000;
-            color: #fff;
+            background: #d4af37;
+            color: #000;
             text-decoration: none;
             padding: 14px 35px;
             border-radius: 30px;
-            font-weight: 600;
+            font-weight: 700;
             font-size: 0.95rem;
             text-transform: uppercase;
             letter-spacing: 1px;
-            transition: background 0.2s, transform 0.2s;
+            transition: background 0.2s, transform 0.2s, box-shadow 0.2s;
             font-family: 'Inter', sans-serif;
         }
 
         .new-generation-btn a:hover {
-            background: #222;
+            background: #c9a032;
             transform: translateY(-2px);
+            box-shadow: 0 6px 16px rgba(212, 175, 55, 0.3);
         }
     </style>
 </head>
