--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Inter:wght@300;400;600&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/jpeg" href="logo.jpeg">
 </head>
 
 <body>
@@ -47,7 +48,7 @@
                             <select id="coverage_type">
                                 <option value="Semi-cover">Semi-cover</option>
                                 <option value="Full cover">Full cover</option>
-                                <option value="Marking">Marquage simple (Lettrage)</option>
+                                <option value="Standard">Standard (Marquage simple)</option>
                             </select>
                         </div>
                     </div>
