--- a/index.html
+++ b/index.html
@@ -109,7 +109,11 @@
                     </button>
                     <div id="loadingIndicator" class="hidden">
                         <div class="spinner"></div>
-                        <p>L'IA conçoit votre covering...</p>
+                        <p id="loadingMessage">Lancement de la génération...</p>
+                        <div class="progress-bar-container">
+                            <div class="progress-bar" id="progressBar"></div>
+                        </div>
+                        <p id="loadingStep" class="loading-step">Étape 1/3</p>
                     </div>
                 </div>
             </form>
