--- a/results.html
+++ b/results.html
@@ -286,6 +286,7 @@
             display: inline-block;
             margin-top: 30px;
             text-align: center;
+            width: 100%;
         }
 
         .new-generation-btn a {
@@ -338,7 +339,7 @@
             <p>Retournez au formulaire pour générer un nouveau design.</p>
         </div>
 
-        <div class="new-generation-btn" style="text-align:center;">
+        <div class="new-generation-btn">
             <a href="index.html">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                     stroke-linejoin="round" width="18" height="18">
